homework3/getavailable/deploy/httpserver-pod.yaml
apiVersion: apps/v1
kind: Pod
metadata:
  name: httpserver-pod
spec:
  containers:
    - name: httpserver
      image: kenga01/httpserver:v0.0.2
      args:
        - /bin/sh
        - -c
        - touch /tmp/httpserverready
      # 1. 优雅启动
      readinessProbe:
        exec:
          command:
            - cat
            - /tmp/httpserverready
        initialDelaySeconds: 15
        periodSeconds: 5
      # 2. 探活
      livenessProbe:
        httpGet:
          ### this probe will fail with 404 error code
          ### only httpcode between 200-400 is retreated as success
          path: /healthz
          port: 80
        initialDelaySeconds: 30
        periodSeconds: 5
        successThreshold: 1
