homework3/getavailable/deploy/httpsvc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpsvc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpserver
  type: LoadBalancer
