homework3/getavailable/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
#    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cncamp.com
      secretName: cncamp-tls
  rules:
    - host: cncamp.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpsvc
                port:
                  number: 80
